testing/blender: upgrade to 2.81a

--- a/testing/blender/APKBUILD
+++ b/testing/blender/APKBUILD
@@ -1,43 +1,43 @@
 # Contributor: Mark Riedesel <mark@klowner.com>
 # Maintainer: Mark Riedesel <mark@klowner.com>
 pkgname=blender
-pkgver=2.79b
+pkgver=2.81a
 _pkgver=${pkgver/[a-z]}
-pkgrel=7
+pkgrel=0
 pkgdesc="3D Creation/Animation/Publishing System"
 url="https://www.blender.org/"
 arch="x86_64"
 license="GPL-2.0-or-later"
 depends="blender-shared=$pkgver-r$pkgrel"
-makedepends="cmake libx11-dev jpeg-dev zlib-dev libpng-dev freetype-dev python3-dev
+makedepends="cmake libx11-dev libjpeg-turbo-dev zlib-dev libpng-dev freetype-dev python3-dev
 	openimageio-dev opencolorio-dev glew-dev openal-soft-dev ffmpeg-dev
 	fftw-dev tiff-dev mesa-dev libxi-dev libsndfile-dev libxmu-dev boost-dev
-	openexr-dev py3-numpy-dev opensubdiv-dev"
+	openexr-dev py3-numpy-dev opensubdiv-dev lzo-dev libxrender-dev openjpeg-dev"
 subpackages="$pkgname-doc $pkgname-shared::noarch $pkgname-headless $pkgname-player py3-$pkgname:python"
-source="http://download.blender.org/source/${pkgname}-${pkgver}.tar.gz
-	blender-2.78a-musl.patch
-	gcc8.patch
-	ffmpeg4.0.patch
+source="https://download.blender.org/source/blender-$_pkgver.tar.xz
+	musl-fixes.patch
+	python-3.8.patch
+	openimageio-lib.patch
 	"
 
-builddir="$srcdir"/$pkgname-$pkgver
+builddir="$srcdir"/$pkgname-$_pkgver
 
 build() {
 	# Headless
 	cd "$builddir"
-	mkdir "$builddir"/build-headless
+	mkdir -p "$builddir"/build-headless
 	cd "$builddir"/build-headless
 	_build -C../build_files/cmake/config/blender_headless.cmake
 
 	# Full
 	cd "$builddir"
-	mkdir "$builddir"/build-full
+	mkdir -p "$builddir"/build-full
 	cd "$builddir"/build-full
 	_build -C../build_files/cmake/config/blender_full.cmake
 
 	# Python module
 	cd "$builddir"
-	mkdir "$builddir"/build-py
+	mkdir -p "$builddir"/build-py
 	cd "$builddir"/build-py
 	_build -C../build_files/cmake/config/bpy_module.cmake
 
@@ -52,10 +52,11 @@ _build() {
 		-DWITH_PYTHON_INSTALL:BOOL=OFF \
 		-DWITH_INSTALL_PORTABLE:BOOL=OFF \
 		-DWITH_OPENCOLORIO:BOOL=ON \
+		-DWITH_IMAGE_OPENEXR=ON \
+		-DWITH_IMAGE_OPENJPEG=ON \
+		-DWITH_TBB:BOOL=OFF \
+		-DWITH_SYSTEM_LZO=ON \
 		-DPYTHON_VERSION=$PY_VERSION \
-		-DPYTHON_LIBPATH=/usr/lib \
-		-DPYTHON_LIBRARY=python${PY_VERSION}m \
-		-DPYTHON_INCLUDE_DIRS=/usr/include/python${PY_VERSION}m \
 		-DNO_EXECINFO:BOOL=ON
 	make
 }
@@ -111,7 +112,7 @@ python() {
 	ln -s /usr/share/blender/${_pkgver} "$subpkgdir"/usr/lib/python${PY_VERSION}/site-packages/${_pkgver}
 }
 
-sha512sums="2db21ace446168dd683cdb5aad9dec001f8888ae4e9603a04ddb44fb78489ded827deb07e83712b0f1118a0e7bf66f2a5d935dc4ebb3a6703d72672ff414367f  blender-2.79b.tar.gz
-47e8a6a017cea8c004d7e4205f201f167dd81ba95a4aadf9e55d01e81cc4a23e4d7f1d6aa7a6d1300fe3a5f5c98c664f584e7551fcde7fb1137147e2438f7ed5  blender-2.78a-musl.patch
-59cc54ddc772ed02db8e6ef94b18bad5c7ec8c1bb8cdc2231a6747063ac386f31a77e58322acf32ef4d5d9278ac0449bbf78e440134bfb612d1c86bb67f9df55  gcc8.patch
-446dd46557c7c976a68010c62e04693c61171980abea1cd0a900b00bcc3d525b83bb6ee200739623110e592e37e8f4783a18f234b40e9f85483830ea9785640d  ffmpeg4.0.patch"
+sha512sums="b7eed47afc4bdb87e9e8a579565935ae8489459197fb9b5978285cfe255ea4fc4151a1178526857921f3b2d54cf63b68dda66586565340f7bfd4274b82e7e9ff  blender-2.81.tar.xz
+f931712c27d5012f1fb01b97107eba9e3bc195c0aafb0a1e782030b5eedf8beb4d15153b46464492098974e17e0b0a1659a078e811423b5a27cdd350209d90c3  musl-fixes.patch
+d95456d26bcf0b28776d4b36a20a210235b11b2ee32b6f051c88d08199792484811573b55f1850f3c1cda816d491ef332de1fe81421b761a7b4be515df726b4e  python-3.8.patch
+42ed74bfae38721b7e8301dfe00a97cba0b25886cb39017620d442f9403386b5ca68daa0907d003e210ae01321986772c9721ea3de512701e6565d60a19f0c8e  openimageio-lib.patch"
