--- a/testing/blender/APKBUILD
+++ b/testing/blender/APKBUILD
@@ -6,7 +6,7 @@ _pkgver=${pkgver/[a-z]}
 pkgrel=0
 pkgdesc="3D Creation/Animation/Publishing System"
 url="https://www.blender.org/"
-arch="x86_64"
+#arch="x86_64"
 license="GPL-2.0-or-later"
 depends="blender-shared=$pkgver-r$pkgrel"
 makedepends="cmake libx11-dev libjpeg-turbo-dev zlib-dev libpng-dev freetype-dev python3-dev
