testing/telegram-desktop: don't unset -g0 so we can compile on linux32

--- a/testing/telegram-desktop/APKBUILD
+++ b/testing/telegram-desktop/APKBUILD
@@ -3,13 +3,12 @@
 # TODO(Leo): remove pulseaudio dep
 pkgname=telegram-desktop
 pkgver=1.9.3
-pkgrel=1
+pkgrel=2
 _breakpad_commit=dbd454dbe47e584571388fc3533193416bdce67f
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
 url="https://desktop.telegram.org/"
 arch="all !s390x" # Need support on lib_base
-arch="$arch !armhf !armv7 !x86" # Not enough memory to link
 license="GPL-3.0-or-later WITH OpenSSL"
 depends="qt5-qtimageformats libappindicator"
 makedepends="
@@ -56,11 +55,13 @@ source="
 	musl-basename.patch
 	updater.patch
 	default-shared.patch
-	exotic-arch-compat.patch
-	werror-o2.patch
+	check-sizeof-void-p.patch
+	werror-lto.patch
 	qt_functions.patch
 	ppc.patch
 	qt-plugin-path.patch
+	guard-msse2.patch
+	variables-after-project.patch
 	qt_functions.cpp
 	"
 builddir="$srcdir/tdesktop-$pkgver-full"
@@ -148,9 +149,11 @@ bcb1ed7ecc7ca5c0282337fad9c341d7468537d0f1ae2dc296d63c34508c9768cd7120a135fea27a
 6062602d02e20917c06f17d12bb21bd4a94b23c2a6744a8a05c2c93d41747ba413e110edd344ecd130c28ebaf997ae46b347d239e69f5856ead42318bd5b01cd  musl-basename.patch
 3182d2da588fd50c771047550e0d4805cce404836ecc6a4f9ccc95b21c6915391ab3f4d75cd745737836d6c483eac84974659b97e9514384efd032ef33044125  updater.patch
 4fb0f0a8c0a57436a10a79d7d1a45c1045d3ac30b9437e65025a4867400b52e52b38c61d447b1392bdf2bd6b241ed25a2c73851c67e08b9198a922c22a316345  default-shared.patch
-b40c9948bab21253d54cbf6c609f82f97c80b064ddc2a5b8347b6322e26836c55a9c3eaab429a46f058bac1c7a7f57fd63979a318af13063ce9039fe29bcfd14  exotic-arch-compat.patch
-d321da9c960641cd7d8159a0f076670b366afb847607a9f05525d17e3751ddcae2f3fa8b0d5f0f4780f7831033f48ce32373104ab35f8d2762e31e1097b20188  werror-o2.patch
+d76f218f65aa33f425da0b2174bb177384aa9dded21869f33bcd97c3f4fdd06977552a46b64d15124b78dece8e192d5193b53cf5c240f44b65407d036f96618b  check-sizeof-void-p.patch
+447c2f29d5527b934c70c39b7f6bdd15760e53dcb08ee516dd72a5bba6f2884958be31c86ed917109661a59e65a7b42b656ca8a81430e0b5e7ca5507f4ccd053  werror-lto.patch
 835f5735d6fc52ad0a3b99f21a0a06cb310f21981a6036f4c9b76312eb947af7fa065ef7f530bcd63ee9271d293778cc8ddf098764c2878a8500aa04ee05c2b1  qt_functions.patch
 9a3e491e2b2a9ea3f15da3766a2d743bafead7ae1e6a6ca3e6e9c7352dc268221311acd73664e5452622e2bc91cc88a2a7d3b4ebe6634b4da74c54b3bde0bb7f  ppc.patch
 183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
+6ec05a4b2d4cdee79eb4a985060c94174f5bd47ca99c8de30ebf8244e2f6bd97fcc56a132fd4e557f1e91f79ced796d149be950dd0b975227865a864542fdbee  guard-msse2.patch
+952570fe403727554b977e923d54b7a61aeaefc411a24d338196c28ad226b025c9005fdfab9f7c191ad2e43105a6aa42dbb059bf0984e7573a423bde6c041a7c  variables-after-project.patch
 edb5e7b1492c4913d2669610c7666a90fd94a615b7e3fc0c84e82bfd56fc61515b0e8ce14b35232a2f60f69db02769b8a05a4d11ccffec771d767cb600c92340  qt_functions.cpp"
