testing/lowjs: use git tag

--- a/testing/lowjs/APKBUILD
+++ b/testing/lowjs/APKBUILD
@@ -1,20 +1,17 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=lowjs
-# NOTE: Don't forget to update _gitrev!
 pkgver=1.4.2
-_gitrev="3bb6c96eb9efd6a6308ae662586bef774c738c97"
 _gitrev_open62541="9f1cbfa96fd050220c86d3e5939d88cab1b680ce"
 _gitrev_duktape="44ca54f726bfa651a7ab59286dd5c371dba2ddfc"
-pkgrel=0
+pkgrel=1
 pkgdesc="A port of Node.JS with far lower system requirements"
 url="https://www.neonious.com/lowjs/"
 arch="all !s390x !ppc64le"  # excluded archs are not supported
 license="custom"
 makedepends="c-ares-dev cmake jq mbedtls-dev npm python2 py2-pip"
 subpackages="$pkgname-doc"
-# FIXME: https://github.com/neonious/lowjs/commit/3bb6c96eb9efd6a6308ae662586bef774c738c97#comments.
-source="https://github.com/neonious/lowjs/archive/$_gitrev/$pkgname-$_gitrev.tar.gz
+source="https://github.com/neonious/lowjs/archive/v$pkgver/$pkgname-$pkgver.tar.gz
 	https://github.com/neonious/open62541/archive/$_gitrev_open62541/open62541-$_gitrev_open62541.tar.gz
 	https://github.com/svaarala/duktape/archive/$_gitrev_duktape/duktape-$_gitrev_duktape.tar.gz
 	use-npm-ci.patch
@@ -25,7 +22,7 @@ source="https://github.com/neonious/lowjs/archive/$_gitrev/$pkgname-$_gitrev.tar
 	make-flags.patch
 	test.js
 	"
-builddir="$srcdir/$pkgname-$_gitrev"
+builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	cd "$builddir"
@@ -42,15 +39,16 @@ prepare() {
 }
 
 build() {
-	local commit_date=$(curl -fsSL https://api.github.com/repos/neonious/lowjs/commits/$_gitrev \
-		| jq -r '.commit.committer.date | .[0:4]+.[5:7]+.[8:10]')
-	[ "$commit_date" ] || { eerror "Failed to get commit's date"; return 1; }
+	local resp=$(curl -fsSL https://api.github.com/repos/neonious/lowjs/commits/v$pkgver)
+	local commit_sha=$(echo "$resp" | jq -r '.sha | .[0:10]')
+	local commit_date=$(echo "$resp" | jq -r '.commit.committer.date | .[0:4]+.[5:7]+.[8:10]')
+	[ "$commit_sha" ] && [ "$commit_date" ] || { eerror "Failed to get commit SHA or date"; return 1; }
 
 	unset LDFLAGS  # fails to build with -Wl,--as-needed
 
 	make -j1 \
 		LOW_LIB_PATH="../lib/low/" \
-		LOW_VERSION="${commit_date}_$(echo "$_gitrev" | cut -c 1-10)"
+		LOW_VERSION="${commit_date}_${commit_sha}"
 }
 
 check() {
@@ -72,7 +70,7 @@ package() {
 	install -D -m 0644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
 
-sha512sums="f567f60da89ccd710486e2d54e00298b9a8f0e337c32c93b678bc4c3f97eddd77582dbf378549ccb8513d19e8b1ce9b05189246d44f44decea359e62ef82fb4b  lowjs-3bb6c96eb9efd6a6308ae662586bef774c738c97.tar.gz
+sha512sums="fa7f41eb7753060a0c613301f2ce12622c12521a668d65f2d6198b1489b5542b9bf7cd2c1c2946eaa92e1ed9b852c8cd7d4316a1775b0a89eb428bdf2e11484d  lowjs-1.4.2.tar.gz
 7c71ff0ce8cda56e4a4cc8e416172fd847f7289d45c4e44e54e56f3081b914d9401c86341ae3d0a4bccd7b6e9c3b274c92892e67e3cd300824bf900cd9f02ac1  open62541-9f1cbfa96fd050220c86d3e5939d88cab1b680ce.tar.gz
 e7f4eaf3f5cb8c791a25c9a1a213953423c6e063d7e3049ccab70fee977bfb4949e23aed50d9720539b798dc9d2e65227bca165ad4faa04797318492b4f06cfc  duktape-44ca54f726bfa651a7ab59286dd5c371dba2ddfc.tar.gz
 b8aecec6aa87eb2ab7ffecaca1989f922042ee534612229872bad10bc0e304951cb66a1d1aa3ba4e76384ca2ea28b8c5b7176eacf6b7df3d59ea7435b7894a48  use-npm-ci.patch
