main/samba: backport fix for python 3.8
fixes #11096

--- a/main/samba/APKBUILD
+++ b/main/samba/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=samba
 pkgver=4.11.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Tools to access a server's filespace and printers via SMB"
 url="https://www.samba.org/"
 arch="all"
@@ -85,6 +85,7 @@ source="
 	musl_rm_unistd_incl.patch
 	add_missing___compar_fn_t.patch
 	pidl.patch
+	python-3.8.patch
 	$pkgname.initd
 	$pkgname.confd
 	$pkgname.logrotate
@@ -587,6 +588,7 @@ c0afe8b1dfddc5290c9aa611163d20adc3a546f54bba0081f739cda4255829f1a72bae422b6cb049
 5cda0a07089b99d99f33de74aae89a338954451167f72a9972cc437a7d06d92590c07386fd24e94c72ff34f1dd42494c5d7fcb48ca1823affa8168e83c239067  musl_rm_unistd_incl.patch
 bc2df70e327fea5dfbd923600225f1448815d842c37d6937dd74eab7f7699d7f52cd7a8e28a61233974649cf86661a0107dce5019d33b71205e4b41bac73f4e2  add_missing___compar_fn_t.patch
 903d9327369cb1b7207955d317b2bba0cb5c30287d4040d3a235cae581479bc49d277cb18d1686cddd60e4430313712e25e0903e1e311265dea86993a2be6c6e  pidl.patch
+a8e31a4f568403fa6da3d3db5f71d01a5f1069bf8dbc50625932803a624724eaf85eae36a0d82efef433c5689db9f6f04671a09560746fdaee9d82c01c15b550  python-3.8.patch
 96070e2461370437f48571e7de550c13a332fef869480cfe92e7cac73a998f6c2ee85d2580df58211953bebd0e577691aa710c8edddf3ea0f30e9d47d0a2fd44  samba.initd
 e2b49cb394e758447ca97de155a61b4276499983a0a5c00b44ae621c5559b759a766f8d1c8d3ee98ad5560f4064a847a7a20cfa2e14f85c061bec8b80fd649eb  samba.confd
 3458a4e1f8a8b44c966afb339b2dca51615be049f594c14911fc4d8203623deee416b6fe881436e246fc7d49c97a2b3bf9c5f33ba774302b24190a1103d6b67d  samba.logrotate"
