--- a/testing/elvish/APKBUILD
+++ b/testing/elvish/APKBUILD
@@ -1,15 +1,14 @@
 # Maintainer: Daniel Isaksen <d@duniel.no>
 pkgname=elvish
-pkgver=0.12
-pkgrel=1
+pkgver=0.13
+pkgrel=0
 pkgdesc="A friendly and expressive shell for Linux, macOS and BSDs"
 url="https://elvish.io/"
 arch="all"
 license="BSD-2-Clause"
-depends=""
 makedepends="go"
-options="!check"
-source="$pkgname-$pkgver.tar.gz::https://github.com/elves/$pkgname/archive/v$pkgver.tar.gz"
+options="!check chmod-clean"
+source="$pkgname-$pkgver.tar.gz::https://github.com/elves/elvish/archive/v$pkgver.tar.gz"
 builddir="$srcdir/src/github.com/elves/$pkgname"
 
 prepare() {
@@ -19,7 +18,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	export GOPATH="$srcdir"
 	go build -o bin/$pkgname
 }
@@ -28,4 +26,4 @@ package() {
 	install -Dm755 "$builddir"/bin/elvish "$pkgdir"/usr/bin
 }
 
-sha512sums="21e31caf997d23412c8a9d2ed9b3bcfb60763e17af4ec4ee09db9027e10ebab4fd331a4be7d5b60ba0aa5ff1a7c5709762e5375f61cac0cbf18bf3d4e73d46fa  elvish-0.12.tar.gz"
+sha512sums="7cafed0c1b82a8042b5b403b8aa44182a248d99e819108187163356ae6e3945c35cae9065eac6f0c98722b056d1db6a210c07966ff8aef9c44c9b11b3f6a1475  elvish-0.13.tar.gz"
