--- a/main/paxctl/APKBUILD
+++ b/main/paxctl/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=paxctl
 pkgver=0.9
-pkgrel=0
-pkgdesc="Manage PaX releated program header flags"
+pkgrel=1
+pkgdesc="Manage PaX related program header flags"
 url="http://pax.grsecurity.net"
 arch="all"
 license="GPL-2.0"
