--- a/testing/py3-wrapt/APKBUILD
+++ b/testing/py3-wrapt/APKBUILD
@@ -11,8 +11,8 @@ license="BSD-2-Clause"
 depends="python3"
 makedepends="python3-dev"
 checkdepends="py3-pytest"
-source="$pkgname-$pkgver.tar.gz::https://github.com/GrahamDumpleton/wrapt/archive/$pkgver.tar.gz"
-builddir="$srcdir/"$_pkgname-$pkgver
+source="https://github.com/GrahamDumpleton/wrapt/archive/$pkgver/$pkgname-$pkgver.tar.gz"
+builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
 	python3 setup.py build
