testing/rav1e: upgrade to 0.2.1
- Ref https://github.com/xiph/rav1e/releases
- Add $pkgname-static

--- a/testing/rav1e/APKBUILD
+++ b/testing/rav1e/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=rav1e
-pkgver=0.2.0
-pkgrel=1
+pkgver=0.2.1
+pkgrel=0
 pkgdesc="The fastest and safest AV1 encoder"
 url="https://github.com/xiph/rav1e"
 arch="all !s390x" # no cargo for s390x
 license="BSD-2-Clause custom"
 options="!check" # No test suite from upstream
 makedepends="cargo nasm"
-subpackages="$pkgname-doc $pkgname-libs"
+subpackages="$pkgname-doc $pkgname-libs $pkgname-static"
 source="$pkgname-$pkgver.tar.gz::https://github.com/xiph/rav1e/archive/v$pkgver.tar.gz"
 
 case "$CARCH" in
@@ -19,6 +19,10 @@ esac
 prepare() {
 	RUSTFLAGS="-C opt-level=0" \
 		cargo install --force --root "$srcdir" cargo-c
+}
+
+check() {
+	cargo test --release
 }
 
 package() {
@@ -32,4 +36,4 @@ package() {
 	rm "$pkgdir/usr/.crates.toml"
 }
 
-sha512sums="f9f218007742de1f97a75866cc562d055f6bcf704c4ad5c216b680f8d65b1e958fc8c6db2bd3cb78a6d97c880c08b603d4235b6297ea3d592ff196866d9617c8  rav1e-0.2.0.tar.gz"
+sha512sums="0e20b45e424e6915e8ea383bb13764c2ca83ca7d5146f1ac46de8994e75a16cee1b21548ef5787460705928757ad83a3259a0c7fb62b51ffa68033f134cbd920  rav1e-0.2.1.tar.gz"
