community/texmf-dist: fixed style issues

--- a/community/texmf-dist/APKBUILD
+++ b/community/texmf-dist/APKBUILD
@@ -19,59 +19,57 @@ _pictures=2019.52499
 _pstricks=2019.52550
 _publishers=2019.52538
 _science=2019.52582
-pkgver=${_core}
+pkgver=$_core
 pkgrel=0
 pkgdesc="TeX Live texmf core distribution"
 url="http://tug.org/texlive/"
 arch="noarch"
-license="GPL"
-depends=""
-depends_dev=""
+license="LPPL-1.0 LPPL-1.1 LPPL-1.2 LPPL-1.3a LPPL-1.3c GPL-2.0-only"
 makedepends="unzip xz"
-install=""
 subpackages="
-	${pkgname}-most
-	${pkgname}-lang
-	${pkgname}-full
-	${pkgname}-bibtexextra
-	${pkgname}-fontsextra
-	${pkgname}-formatsextra
-	${pkgname}-games
-	${pkgname}-humanities
-	${pkgname}-langchinese
-	${pkgname}-langcyrillic
-	${pkgname}-langextra
-	${pkgname}-langgreek
-	${pkgname}-langjapanese
-	${pkgname}-langkorean
-	${pkgname}-latexextra
-	${pkgname}-music
-	${pkgname}-pictures
-	${pkgname}-pstricks
-	${pkgname}-publishers
-	${pkgname}-science
+	$pkgname-most
+	$pkgname-lang
+	$pkgname-full
+	$pkgname-bibtexextra
+	$pkgname-fontsextra
+	$pkgname-formatsextra
+	$pkgname-games
+	$pkgname-humanities
+	$pkgname-langchinese
+	$pkgname-langcyrillic
+	$pkgname-langextra
+	$pkgname-langgreek
+	$pkgname-langjapanese
+	$pkgname-langkorean
+	$pkgname-latexextra
+	$pkgname-music
+	$pkgname-pictures
+	$pkgname-pstricks
+	$pkgname-publishers
+	$pkgname-science
 	"
 source="
-	https://sources.archlinux.org/other/texlive/texlive-core-${_core}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-bibtexextra-${_bibtexextra}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-fontsextra-${_fontsextra}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-formatsextra-${_formatsextra}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-games-${_games}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-humanities-${_humanities}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-langchinese-${_langchinese}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-langcyrillic-${_langcyrillic}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-langextra-${_langextra}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-langgreek-${_langgreek}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-langjapanese-${_langjapanese}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-langkorean-${_langkorean}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-latexextra-${_latexextra}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-music-${_music}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-pictures-${_pictures}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-pstricks-${_pstricks}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-publishers-${_publishers}-src.zip
-	https://sources.archlinux.org/other/texlive/texlive-science-${_science}-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-core-$_core-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-bibtexextra-$_bibtexextra-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-fontsextra-$_fontsextra-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-formatsextra-$_formatsextra-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-games-$_games-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-humanities-$_humanities-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-langchinese-$_langchinese-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-langcyrillic-$_langcyrillic-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-langextra-$_langextra-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-langgreek-$_langgreek-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-langjapanese-$_langjapanese-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-langkorean-$_langkorean-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-latexextra-$_latexextra-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-music-$_music-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-pictures-$_pictures-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-pstricks-$_pstricks-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-publishers-$_publishers-src.zip
+	https://sources.archlinux.org/other/texlive/texlive-science-$_science-src.zip
 	duplicates.txt
 	"
+# This is a data only package; no unit tests to run
 options="!check"
 
 unpack() {
@@ -79,10 +77,10 @@ unpack() {
 	return 0
 }
 
-build(){
+build() {
 	return 0
 }
-	
+
 package() {
 	# Packages are packed in .tar.xz archives, which in turn are bundled into a
 	# zip. We will unzip each bundle into pkgs-packed and untar all packages of
@@ -91,88 +89,88 @@ package() {
 	# will create a mess. We will later copy all folders beginning with texmf
 	# into /usr/share, and merge every remaining file into
 	# /usr/share/texmf-dist to clean up this mess.
-	
-	mkdir -p "${pkgdir}/usr/share/"
-	mkdir -p "${srcdir}/pkgs-packed"
-	mkdir -p "${srcdir}/pkgs-unpacked"
-	cd "${srcdir}/pkgs-packed"
-	unzip "${srcdir}/texlive-core-${_core}-src.zip" > /dev/null
-	cd "${srcdir}/pkgs-unpacked"
-	find "${srcdir}/pkgs-packed" -name '*.tar.xz' -exec tar -xf {} \;
-	find . -maxdepth 1 -name 'texmf*' -exec mv {} "${pkgdir}/usr/share/" \;
-	find . -type d -mindepth 1 -exec mkdir -p "${pkgdir}/usr/share/texmf-dist/"{} \;
-	find . -type f -exec mv {} "${pkgdir}/usr/share/texmf-dist/"{} \;
+
+	mkdir -p "$pkgdir/usr/share/"
+	mkdir -p "$srcdir/pkgs-packed"
+	mkdir -p "$srcdir/pkgs-unpacked"
+	cd "$srcdir/pkgs-packed"
+	unzip "$srcdir/texlive-core-$_core-src.zip" > /dev/null
+	cd "$srcdir/pkgs-unpacked"
+	find "$srcdir/pkgs-packed" -name '*.tar.xz' -exec tar -xf {} \;
+	find . -maxdepth 1 -name 'texmf*' -exec mv {} "$pkgdir/usr/share/" \;
+	find . -type d -mindepth 1 -exec mkdir -p "$pkgdir/usr/share/texmf-dist/"{} \;
+	find . -type f -exec mv {} "$pkgdir/usr/share/texmf-dist/"{} \;
 
 	# Remove files already provided by texlive* packages
-	cd "${pkgdir}/usr/share/texmf-dist"
-	for file in $(cat "${srcdir}/duplicates.txt"); do
+	cd "$pkgdir/usr/share/texmf-dist"
+	while IFS= read -r file; do
 		rm -f $file
-	done
+	done < "$srcdir/duplicates.txt"
 
-	rm -rf "${srcdir}/pkgs-packed" "${srcdir}/pkgs-unpacked"
+	rm -rf "$srcdir/pkgs-packed" "$srcdir/pkgs-unpacked"
 }
 
 pack_subpkg() {
 	local our_pkgver="$1"
 
 	# See comment in package(), same applies here
-	mkdir -p "${subpkgdir}/usr/share/"
-	mkdir -p "${srcdir}/pkgs-packed"
-	mkdir -p "${srcdir}/pkgs-unpacked"
-	cd "${srcdir}/pkgs-packed"
-	unzip "${srcdir}/texlive-${subpkgname#texmf-dist-}-${our_pkgver}-src.zip" > /dev/null
-	cd "${srcdir}/pkgs-unpacked"
-	find "${srcdir}/pkgs-packed" -name '*.tar.xz' -exec tar -xf {} \;
-	find . -maxdepth 1 -name 'texmf*' -exec mv {} "${subpkgdir}/usr/share/" \;
-	find . -type d -mindepth 1 -exec mkdir -p "${subpkgdir}/usr/share/texmf-dist/"{} \;
-	find . -type f -exec mv {} "${subpkgdir}/usr/share/texmf-dist/"{} \;
+	mkdir -p "$subpkgdir/usr/share/"
+	mkdir -p "$srcdir/pkgs-packed"
+	mkdir -p "$srcdir/pkgs-unpacked"
+	cd "$srcdir/pkgs-packed"
+	unzip "$srcdir/texlive-${subpkgname#texmf-dist-}-$our_pkgver-src.zip" > /dev/null
+	cd "$srcdir/pkgs-unpacked"
+	find "$srcdir/pkgs-packed" -name '*.tar.xz' -exec tar -xf {} \;
+	find . -maxdepth 1 -name 'texmf*' -exec mv {} "$subpkgdir/usr/share/" \;
+	find . -type d -mindepth 1 -exec mkdir -p "$subpkgdir/usr/share/texmf-dist/"{} \;
+	find . -type f -exec mv {} "$subpkgdir/usr/share/texmf-dist/"{} \;
 
 	# Remove files already provided by texlive* packages
-	cd "${subpkgdir}/usr/share/texmf-dist"
-	for file in $(cat "${srcdir}/duplicates.txt"); do
+	cd "$subpkgdir/usr/share/texmf-dist"
+	while IFS= read -r file; do
 		rm -f $file
-	done
+	done < "$srcdir/duplicates.txt"
 
-	rm -rf "${srcdir}/pkgs-packed" "${srcdir}/pkgs-unpacked"
+	rm -rf "$srcdir/pkgs-packed" "$srcdir/pkgs-unpacked"
 }
 
 most() {
 	pkgdesc="TeX Live texmf distribution including most packages"
 	depends="
-		${pkgname}
-		${pkgname}-bibtexextra
-		${pkgname}-fontsextra
-		${pkgname}-formatsextra
-		${pkgname}-games
-		${pkgname}-humanities
-		${pkgname}-latexextra
-		${pkgname}-music
-		${pkgname}-pictures
-		${pkgname}-pstricks
-		${pkgname}-publishers
-		${pkgname}-science
+		$pkgname
+		$pkgname-bibtexextra
+		$pkgname-fontsextra
+		$pkgname-formatsextra
+		$pkgname-games
+		$pkgname-humanities
+		$pkgname-latexextra
+		$pkgname-music
+		$pkgname-pictures
+		$pkgname-pstricks
+		$pkgname-publishers
+		$pkgname-science
 		"
-	mkdir -p "${subpkgdir}"
+	mkdir -p "$subpkgdir"
 }
 
 lang() {
 	pkgdesc="TeX Live texmf distribution: Additional languages"
 	depends="
-		${pkgname}
-		${pkgname}-langchinese
-		${pkgname}-langcyrillic
-		${pkgname}-langextra
-		${pkgname}-langgreek
-		${pkgname}-langjapanese
-		${pkgname}-langkorean
+		$pkgname
+		$pkgname-langchinese
+		$pkgname-langcyrillic
+		$pkgname-langextra
+		$pkgname-langgreek
+		$pkgname-langjapanese
+		$pkgname-langkorean
 		"
-	mkdir -p "${subpkgdir}"
+	mkdir -p "$subpkgdir"
 }
 
 full() {
 	pkgdesc="Full TeX Live texmf distribution"
-	depends="${pkgname}-most ${pkgname}-lang"
-	mkdir -p "${subpkgdir}"
+	depends="$pkgname-most $pkgname-lang"
+	mkdir -p "$subpkgdir"
 }
 
 bibtexextra() {
