testing/py3-srsly: upgrade to 2.0.0
- Ref https://github.com/explosion/srsly/releases
- Remove ujson-float-check.patch as it was merged upstream

--- a/testing/py3-srsly/APKBUILD
+++ b/testing/py3-srsly/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=py3-srsly
-pkgver=0.2.0
+pkgver=2.0.0
 pkgrel=0
 pkgdesc="Modern high-performance serialization utilities for Python"
 url="https://github.com/explosion/srsly"
@@ -11,8 +11,7 @@ depends="python3 py3-numpy py3-tz"
 makedepends="python3-dev py3-setuptools cython"
 checkdepends="py3-pytest py3-pytest-timeout py3-mock"
 subpackages="$pkgname-doc"
-source="srsly-$pkgver.tar.gz::https://github.com/explosion/srsly/archive/v$pkgver.tar.gz
-	ujson-float-check.patch"
+source="srsly-$pkgver.tar.gz::https://github.com/explosion/srsly/archive/v$pkgver.tar.gz"
 builddir="$srcdir/srsly-$pkgver"
 
 build() {
@@ -29,5 +28,4 @@ package() {
 	install -Dm644 README.md "$pkgdir/usr/share/doc/$pkgname/README.md"
 }
 
-sha512sums="2ffd145160d2b3003eed55f60e9904458abc9f3d9ba27d79370531ddcaced111643d527bc4b26afddc0ce38fa0a59dd8e8116ee56c4067ea7ba1ed2c1083571c  srsly-0.2.0.tar.gz
-d8620217181fbedc9e32a5383a41098940a5bdf2d91cfa08842b084865101dd4ec5e8038b37d7f7c4025c8d09dabecdeb199d51c584a21258fcd6abcce9065b5  ujson-float-check.patch"
+sha512sums="c0c275f2f006907c9b6cbccbdc3a070473285e9a2fe112c3277e28249254a878cd74648ce8b0b6d60091d8b87ecc01b0af42f86b172c92c7b678446ae036f641  srsly-2.0.0.tar.gz"
