community/salt: switch to tornado5
Salt does not support tornado 6 yet, and no commitment has been made to
support tornado 6. So switch dependencies to a new tornado5 package.
This package renamed the tornado module to tornado5, so make sure all
references to tornado are updated.

--- a/community/salt/APKBUILD
+++ b/community/salt/APKBUILD
@@ -3,12 +3,12 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=salt
 pkgver=2019.2.2
-pkgrel=3
+pkgrel=4
 pkgdesc="A parallel remote execution system"
 url="https://github.com/saltstack/salt"
 arch="noarch !s390x"
 license="Apache-2.0"
-depends="py3-tornado py3-yaml py3-jinja2 py3-markupsafe py3-msgpack
+depends="py3-tornado5 py3-yaml py3-jinja2 py3-markupsafe py3-msgpack
 	py3-pycryptodome py3-pyzmq py3-six py3-requests py3-pygit2 py3-dateutil
 	py3-distro procps
 	"
@@ -31,6 +31,14 @@ source="https://pypi.io/packages/source/s/salt/salt-$pkgver.tar.gz
 	fix-grains-dist-detection.patch
 	"
 options="!check" # depends on pytestsalt
+
+prepare() {
+	default_prepare
+
+	find tests salt -type f -name '*.py' -exec sed -i -E \
+		-e 's/^(\s*(from|import)) tornado/\1 tornado5/' \
+		-e 's/tornado\./tornado5./g' {} \;
+}
 
 build() {
 	python3 setup.py build
