testing/py3-thinc: enable x86 as dependency py3-blis now supports it
- Disable some tests due to use of py3-hypothesis >= 5.0.0

--- a/testing/py3-thinc/APKBUILD
+++ b/testing/py3-thinc/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=py3-thinc
 pkgver=7.3.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Practical Machine Learning for NLP"
 url="https://github.com/explosion/thinc"
-arch="x86_64"
+arch="x86_64 x86"
 license="MIT"
 depends="python3 py3-cymem py3-preshed py3-murmurhash py3-blis py3-plac py3-srsly py3-wasabi"
 makedepends="python3-dev py3-setuptools cython"
@@ -19,7 +19,11 @@ build() {
 }
 
 check() {
-	pytest-3 thinc
+	# disable some tests due to use of py3-hypothesis >= 5.0.0
+	pytest-3 thinc \
+		--ignore=thinc/tests/integration/test_batch_norm.py \
+		--ignore=thinc/tests/unit/test_affine.py \
+		--ignore=thinc/tests/unit/test_ops.py
 }
 
 package() {
