--- a/main/grep/APKBUILD
+++ b/main/grep/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=grep
-pkgver=3.3
+pkgver=3.4
 pkgrel=0
 pkgdesc="Searches input files for lines containing a match to a specified pattern"
 url="https://www.gnu.org/software/grep/grep.html"
 arch="all"
-license="GPL-3.0+"
+license="GPL-3.0-or-later"
 makedepends="pcre-dev autoconf automake"
 checkdepends="coreutils bash diffutils"
 subpackages="$pkgname-doc"
-source="https://mirrors.kernel.org/gnu/$pkgname/$pkgname-$pkgver.tar.xz
+source="https://mirrors.kernel.org/gnu/grep/grep-$pkgver.tar.xz
 	fix-tests.patch"
-builddir="$srcdir/$pkgname-$pkgver"
 # for whatever reason, all the builders locked up in the testsuite.  investigate later.
 options="!check"
 
@@ -23,7 +22,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -41,12 +39,11 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	rm -rf "$pkgdir"/usr/lib/charset.alias
 	rmdir -p "$pkgdir"/usr/lib 2>/dev/null || true
 }
 
-sha512sums="e4805dbddf7cd0f0faf412557d408509650c1ccf703bc450f10a3f727c690dbfaa1235aa81939a0e4b7ac6190f88c15ea1fcc562b343d4b4c7550f967aeb15db  grep-3.3.tar.xz
+sha512sums="0f1506bd19971fbdcb47a111277ca63e8ad045456f096980852fd0a61c860f29f4b369bbaaa5cbce4b0a81718e3e3274d9a078b491f2109baa9a02ce600ee206  grep-3.4.tar.xz
 9ba6b01c0c74933299afb469dadd2ea0c7e24befa34c691671a576063e32a1f0c735541e5e2bb0073d8afd814790909f7f895827aa8a2fbacdfcae380a7bcb11  fix-tests.patch"
