community/fdupes: upgrade to 2.0.0

--- a/community/fdupes/APKBUILD
+++ b/community/fdupes/APKBUILD
@@ -1,35 +1,30 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer:
 pkgname=fdupes
-pkgver=1.6.1
-pkgrel=1
+pkgver=2.0.0
+pkgrel=0
 pkgdesc="identifying or deleting duplicate files residing within specified directories"
 url="https://github.com/adrianlopezroche/fdupes"
 arch="all"
 license="MIT"
-depends=""
-depends_dev=""
-makedepends="$depends_dev"
-install=""
+makedepends="ncurses-dev pcre2-dev"
 subpackages="$pkgname-doc"
-source="fdupes-$pkgver.tar.gz::https://github.com/adrianlopezroche/fdupes/archive/v$pkgver.tar.gz
-	overide-prefix.patch
-	"
-builddir="$srcdir/fdupes-$pkgver"
+source="https://github.com/adrianlopezroche/fdupes/releases/download/$pkgver/fdupes-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
+	./configure \
+		--build=$CBUILD \
+		--host=$CHOST \
+		--prefix=/usr
 	make
 }
 
+check() {
+	make check
+}
+
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" PREFIX="/usr" install
 }
 
-check() {
-	"$builddir"/fdupes --version &> /dev/null
-}
-
-sha512sums="6c6662b70068c2f48f4be64a6830c81a66852d650391d0756f20b9ac0df7d70c1a32918bd7cbd50e19de524d9ebc09ea338c19636e1807b071eb96b325e641db  fdupes-1.6.1.tar.gz
-57685eabb2688f1e64ca8d61e54088ea8ad10820d15c2467f04e75cc0ee293dff68646a87055b028e81ddc0c6c7d3bef5724aef9f7ba2b6c8e45dfe472e52e3d  overide-prefix.patch"
+sha512sums="3c76cfba1cc650f6e680933cda6236e2110018d8a6a132e146d0d61c8f44cac5944e9966b1f3de5847aca6f233ab4df9b180888e0f4b3e3fa5ae8c5f9cb1484f  fdupes-2.0.0.tar.gz"
