testing/ldc: upgrade to 1.19.0
The package used to depend on itself (and was broken),
now using gdc we have a more sustainable bootstrap path.
It needs to be upgrade to v1.19.0 to include the fixes for
Musl which were made while porting 'gcc-gdc'.

--- a/testing/ldc/APKBUILD
+++ b/testing/ldc/APKBUILD
@@ -1,27 +1,37 @@
 # Contributor: Mathias LANG <pro.mathias.lang@gmail.com>
 # Maintainer: Mathias LANG <pro.mathias.lang@gmail.com>
 pkgname=ldc
-pkgver=1.18.0
+pkgver=1.19.0
 pkgrel=0
 pkgdesc="The LLVM-based D Compiler"
 url="https://github.com/ldc-developers/ldc"
-# Bootstrapping was done with an upstream-provided package,
-# with only x86_64 available
-# Once we can use GDC for bootstrapping, this can be "all"
+# Currently limited to x86_64 because of issues with GDC
 arch="x86_64"
-license="BSD-3-Clause AND BSL-1.0 AND (Artistic-1.0 OR GPL-2.0-or-later) AND NCSA AND MIT"
+license="BSD-3-Clause AND BSL-1.0 AND ( Artistic-1.0 OR GPL-2.0-or-later ) AND NCSA AND MIT"
 depends="libexecinfo tzdata"
-makedepends="bash chrpath cmake curl-dev diffutils dlang-compiler gdb grep llvm9-dev llvm9-static libedit-dev libexecinfo-static py-pip zlib-dev"
+makedepends="bash chrpath cmake curl-dev diffutils gdb gdmd grep llvm9-dev llvm9-static libedit-dev libexecinfo-static py-pip zlib-dev"
 # A user might want to install the '-runtime' subpackage when they have
 # a dynamically-linked D program.
 subpackages="$pkgname-runtime $pkgname-static"
-provides="dlang-compiler"
 source="https://github.com/ldc-developers/ldc/releases/download/v$pkgver/ldc-$pkgver-src.tar.gz
 		01-stdio-fseek.patch
 		02-conf.patch"
 builddir="$srcdir/ldc-$pkgver-src/"
 
 build() {
+	# First, build LDC using GDC
+	mkdir -p "$builddir/stage1"
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
+	cmake \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		-DD_COMPILER='gdmd' \
+		$CMAKE_CROSSOPTS -S "$builddir" -B "$builddir/stage1"
+	make -C "$builddir/stage1"
+
+	# Then, self-build
 	if [ "$CBUILD" != "$CHOST" ]; then
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
@@ -32,32 +42,33 @@ build() {
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
+		-DD_COMPILER="$builddir/stage1/bin/ldmd2" \
 		$CMAKE_CROSSOPTS "$builddir"
 	make
 
 	# CMake added the rpaths to the shared libs - strip them
 	chrpath -d "$builddir"/lib/*.so*
-	:
 }
 
 check() {
 	# Dependency to lit-test
 	python -m pip install --user lit
 
-	# Note: The testsuite does not parallelize well, as the `clean` target get run in parallel.
-	# Hence `-j${JOBS}` was left out on purpose
+	# Note: The testsuite does not parallelize well, as the 'clean' target get run in parallel.
+	# Hence '-j${JOBS}' was left out on purpose
 	#
 	# - dmd-testsuite takes too long to run and has more to do with language checks
 	#	which are less relevant to us than platform integration tests
 	# - lit-test disabled because 'TEST 'LDC :: debuginfo/print_gdb.d' FAILED'
 	#	Something to do with TLS variables not being printable in GDB
-	# - 'druntime-test-shared' fails, probably because it is using `Object.factory`
+	# - 'druntime-test-shared' fails, probably because it is using 'Object.factory'
 	# - 'druntime-test-stdcpp' fails for an unknown reason and is temporarily disabled
 	# - 'druntime-test-exceptions' fails for an unknown reason and is temporarily disabled
 	ctest --output-on-failure -E "dmd-testsuite|lit-tests|druntime-test-exceptions|druntime-test-shared|druntime-test-stdcpp"
 }
 
 package() {
+	depends="$pkgname-static=$pkgver-r$pkgrel"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -73,7 +84,6 @@ runtime() {
 	mv "$pkgdir"/usr/lib/libldc-jit.so* "$subpkgdir/usr/lib"
 
 	mv "$pkgdir"/usr/lib/*.so* "$subpkgdir/usr/lib/"
-	:
 }
 
 static() {
@@ -84,6 +94,6 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir/usr/lib/"
 }
 
-sha512sums="fe7529c33d0e43dfb71f474dfa381b88ee476b70933c8f80fc063d9a015df24a75e2b607a7242cc4b9cd4b6ac7559aec8f2883016bf7252342742322fcccbd4d  ldc-1.18.0-src.tar.gz
+sha512sums="ffd1b085c7c8fe76162051234cc73e92f08a391cebac3f405c9dc6d03fcbf459d5e99295066ab4b0bd931bdce84dce53e23c33c1bc8ad35327f1b283f8e8f10a  ldc-1.19.0-src.tar.gz
 20d6bb560867052edeed6005e15473dae25c62002c7bd47f0e37610ffd5e94a50b49244c2a9b814f4858babca403f120ae6028cd86f964dd4734736eda068536  01-stdio-fseek.patch
 eb86e4be0ecf72aaabbd5608c8056bb9cede035895e766330b6d14f14c06dc513fcecc1b6e56ab6fc9fc26c220a689cc8b1394a30a319189c414f1e067c1d983  02-conf.patch"
