testing/gnurl: upgrade to 7.67.0

--- a/testing/gnurl/APKBUILD
+++ b/testing/gnurl/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer:
 pkgname=gnurl
-pkgver=7.65.3
+pkgver=7.67.0
 pkgrel=0
 pkgdesc="A micro fork of libcurl"
 url="https://gnunet.org/en/gnurl.html"
@@ -13,7 +13,13 @@ checkdepends="python3"
 makedepends="$depends_dev perl"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://mirror.kumi.systems/gnu/gnunet/gnurl-$pkgver.tar.gz"
-builddir="$srcdir/gnurl-$pkgver"
+
+# secfixes:
+#   7.66.0-r0:
+#     - CVE-2019-5482
+#     - CVE-2019-5481
+#   7.65.0-r0:
+#     - CVE-2019-5436
 
 build() {
 	# Note: The second group of options is based on
@@ -77,4 +83,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="51aa71352dfe2e65dbcf542cb616af1eaa7e80fbc4ddb455a338e74eea245724ac1fa7ff226c418101e8ba298a8f85c2be9e7d9190a57c66e2e8c65d0c5186f8  gnurl-7.65.3.tar.gz"
+sha512sums="5044277a2c22412860e58e5017fba28cd4014216717bc1d312d61526170d63a14279d4007f66736ecb83720f92871aa63973255a34d338050638a84ee357cfd1  gnurl-7.67.0.tar.gz"
