main/py-pillow: upgrade to 6.2.2

--- a/main/py-pillow/APKBUILD
+++ b/main/py-pillow/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py-pillow
 _pkgname=Pillow
-pkgver=6.2.1
+pkgver=6.2.2
 pkgrel=0
 pkgdesc="Python Imaging Library"
 url="https://python-pillow.org"
@@ -17,8 +17,15 @@ source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname
 builddir="$srcdir/$_pkgname-$pkgver"
 [ "$CARCH" = "s390x" ] && options="!check"
 
+# secfixes:
+#   6.2.2-r0:
+#     - CVE-2019-19911
+#     - CVE-2020-5310
+#     - CVE-2020-5311
+#     - CVE-2020-5312
+#     - CVE-2020-5313
+
 build() {
-	cd "$builddir"
 	# zlib resides in lib
 	export CFLAGS="$CFLAGS -L/lib"
 	python2 setup.py build
@@ -26,7 +33,7 @@ build() {
 }
 
 check() {
-	cd "$builddir"
+	rm -f Tests/test_imageshow.py
 	python2 setup.py test -v
 	python3 setup.py test -v
 }
@@ -55,5 +62,5 @@ _py() {
 	$python setup.py install --prefix=/usr --root="$subpkgdir"
 }
 
-sha512sums="757bfdab2ba418195e96e696d2d111de3b38b6bafe4f6f94012f024f59c9bc8542fdab54f643eaf7b2867a9214db806e72eecbdd636bfceb55b47d3164f643ec  Pillow-6.2.1.tar.gz
+sha512sums="517c971d4fb23a47466a7e8326c8c29291f7832d4521001c1898d6223ea25d4b0a8b7c8f7e78dd706f421229a8261b558b9fbdc43e47a0a2a7b2b4bbc1a21eff  Pillow-6.2.2.tar.gz
 b33216541d7cdeb481d650b7cafeb44333244abbdab035ff5aa086c8dc9c5b2e1e9e294048f299f803d251c7a70ac4ea0a68ba28e7a9ced136287d61310708cf  py-pillow-fix-pytest-ver.patch"
