community/wireguard-rpi: enable for rpi4

--- a/community/wireguard-rpi/APKBUILD
+++ b/community/wireguard-rpi/APKBUILD
@@ -16,7 +16,9 @@ _extra_flavors=
 if [ -z "$FLAVOR" ]; then
 	_flavor=rpi
 	case $CARCH in
-	armhf|armv7) _extra_flavors=rpi2;;
+	armhf) _extra_flavors=rpi2;;
+	armv7) _extra_flavors="rpi2 rpi4";;
+	aarch64) _extra_flavors=rpi4;;
 	esac
 else
 	_flavor=$FLAVOR
