--- a/testing/libretro-mgba/APKBUILD
+++ b/testing/libretro-mgba/APKBUILD
@@ -1,16 +1,15 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libretro-mgba
-_pkgname=mgba
-pkgver=0.1.1_git20190707
+pkgver=0.1.1_git20191026
 pkgrel=0
-_commit="9c8a1a598d04e764df5f848ff619869a9c3f6ad8"
+_commit="429d2f2a6ab55716a3465cd709d3d16e3a1b70de"
 arch="all"
 url="https://github.com/libretro/mgba"
 pkgdesc="Nintendo Game Boy Advance core"
 license="MPL-2.0"
-source="$pkgname-$_commit.tar.gz::https://github.com/libretro/$_pkgname/archive/$_commit.tar.gz"
-builddir="$srcdir/$_pkgname-$_commit"
+source="$pkgname-$_commit.tar.gz::https://github.com/libretro/mgba/archive/$_commit.tar.gz"
+builddir="$srcdir/mgba-$_commit"
 options="!check" # No tests
 
 build() {
@@ -21,4 +20,4 @@ package() {
 	install -Dm644 mgba_libretro.so "$pkgdir"/usr/lib/libretro/mgba_libretro.so
 }
 
-sha512sums="8189ba1003bbd8553375beaff136d6f9bb80410c2d4652adc0342994366f545c1ee0fafb98cd0daac5148be3e5287ff5f46c052ce735b6c27c996fc98cbe4618  libretro-mgba-9c8a1a598d04e764df5f848ff619869a9c3f6ad8.tar.gz"
+sha512sums="0ded62712a55823efc6d7333423285446e58eae613bb5e93533f14ce36f40e4e068892f1a5b2073bfa0d0baabc95dbc9b60fef04cb516cb5f4dae25e3e050c38  libretro-mgba-429d2f2a6ab55716a3465cd709d3d16e3a1b70de.tar.gz"
