testing/libretro-mupen64plus: upgrade to 0_git20191209

--- a/testing/libretro-mupen64plus/APKBUILD
+++ b/testing/libretro-mupen64plus/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libretro-mupen64plus
-_pkgname=mupen64plus-libretro-nx
-pkgver=0_git20190625
+pkgver=0_git20191209
 pkgrel=0
-_commit="b31459d1e9b1bc1cf93d3577e185fe8d4198a978"
+_commit="39048f20d0a28e906095a744f1b1553dfb16c7df"
 arch="x86_64 aarch64" # Seems to be broken on non 64-bit platforms
 url="https://github.com/libretro/mupen64plus-libretro-nx"
 pkgdesc="libretro port of Mupen64 Plus with GLideN64"
 license="GPL-2.0-or-later"
 makedepends="mesa-dev zlib-dev libpng-dev nasm"
-source="$pkgname-$pkgver.tar.gz::https://github.com/libretro/$_pkgname/archive/$_commit.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/libretro/mupen64plus-libretro-nx/archive/$_commit.tar.gz
 	musl-incompatibility.patch"
-builddir="$srcdir/$_pkgname-$_commit"
+builddir="$srcdir/mupen64plus-libretro-nx-$_commit"
 options="!check" # No tests
 
 build() {
@@ -33,5 +32,5 @@ package() {
 	install -Dm644 mupen64plus_next_libretro.so "$pkgdir"/usr/lib/libretro/mupen64plus_next_libretro.so
 }
 
-sha512sums="f098f2535404ce6703d0eab656c2d4799826e032870cc2f4cb59ec68f4f95b69e4300a9309e968eae0a856536d900a578b51f6f0093ed57e1d42b9ad271d4578  libretro-mupen64plus-0_git20190625.tar.gz
+sha512sums="172f5f5f7024078f891368a388e482d917c6f1db276547e09ac5836eefa438a74fd0f15321ff5f84b92a9d623bd8e934cbfb7f72d215cdf7651242fadd2d0383  libretro-mupen64plus-0_git20191209.tar.gz
 8680a71cbecd1dfc30e1150d0cf258b20b928aa4eff341087a031c72459fc8a11415ebc5c8ff4fdd5b43915a6450f4dcad1aa9fb7ecbaceeed62aec3c45b5761  musl-incompatibility.patch"
