--- a/testing/corecollector/APKBUILD
+++ b/testing/corecollector/APKBUILD
@@ -1,12 +1,11 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=corecollector
-pkgver=0.1.0
+pkgver=0.1.1
 pkgrel=0
 pkgdesc="A coredump collector written in D"
 url="https://github.com/Cogitri/corecollector"
-arch="x86_64" # Missing gdc on ppc64le, failing tests on other arches
-# missing *context functions on s90x
+arch="all !s390x !ppc64le" # Missing gdc on ppc64le, missing *context functions on s90x
 license="GPL-3.0-or-later"
 makedepends="meson gcc-gdc"
 source="https://github.com/Cogitri/corecollector/archive/v$pkgver/corecollector-$pkgver.tar.gz"
@@ -30,4 +29,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="062850b952673e3e53f32f7c16c95dc847f979a33e3dc2a2a07cba4ed130480bc52d8a392e98f444e777b454606003906efb7041d2ca7c80183a2ed8ef52c81a  corecollector-0.1.0.tar.gz"
+sha512sums="b67a05e5dd8d56a92a6d3e09d87949d8da9fb83a1d6685f9c9633c0829211aed977f3260d161560503166167054e53a3481f589e675e0db4f61de5db28cef81d  corecollector-0.1.1.tar.gz"
