--- a/main/supervisor/APKBUILD
+++ b/main/supervisor/APKBUILD
@@ -15,6 +15,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/Supervisor/supervisor/archiv
 	supervisord.logrotate"
 
 # secfixes:
+#   4.1.0-r0:
+#     - CVE-2019-12105
 #   3.2.4-r0:
 #     - CVE-2017-11610
 
