testing/grafana: enable all archs

--- a/testing/grafana/APKBUILD
+++ b/testing/grafana/APKBUILD
@@ -7,13 +7,14 @@ _commit=742d165968 # git rev-parse --short HEAD
 _stamp=1576068086 # git --no-pager show -s --format=%ct
 pkgdesc="Open source, feature rich metrics dashboard and graph editor"
 url="https://grafana.com"
-arch="x86_64" # Builds are slow on arm archs, x86 requires python2.
+arch="all"
 license="Apache-2.0"
-makedepends="go nodejs yarn"
+makedepends="go nodejs yarn python3"
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/grafana/grafana/archive/v$pkgver.tar.gz
-	$pkgname.initd $pkgname.confd"
+	$pkgname.initd $pkgname.confd
+	iltorb.patch"
 
 export GOPATH=${GOPATH:-$srcdir/go}
 export GOCACHE=${GOCACHE:-$srcdir/go-build}
@@ -54,4 +55,5 @@ package() {
 
 sha512sums="adfda7bdb1ce3befcb2bcf340af60edcf7e77e67ae8d81860d773b47592e3446adf951b7df06b2ab1ef51a963ffb1067fea8796f18b9bb0a04d660028740f020  grafana-6.5.2.tar.gz
 b0a781e1b1e33741a97e231c761b1200239c6f1235ffbe82311fe883387eb23bef262ad68256ebd6cf87d74298041b53b947ea7a493cfa5aa814b2a1c5181e13  grafana.initd
-c2afa7f6baf8f468fbd781b0522cbff173bb0c3964eb08fc4a0951d034e8a1f3f9c14798e2ac487b3c20db834110883db8162039b18195e97bb9f4bc5baffc33  grafana.confd"
+c2afa7f6baf8f468fbd781b0522cbff173bb0c3964eb08fc4a0951d034e8a1f3f9c14798e2ac487b3c20db834110883db8162039b18195e97bb9f4bc5baffc33  grafana.confd
+1fb96e13d337fed497bbd21ab217650bfdc4a2cc340434b26895e94c76033a4ec9d497200d96b17a7a1c867da68cc79b77da49e4fd53222b764f7ccc855cf7de  iltorb.patch"
