--- a/main/luajit/APKBUILD
+++ b/main/luajit/APKBUILD
@@ -4,17 +4,18 @@ pkgname=luajit
 _pkgname=LuaJIT
 pkgver=2.1.0_beta3
 _pkgver=${pkgver/_/-}
-pkgrel=5
+pkgrel=6
 pkgdesc='Just-in-time compiler and replacement for Lua 5.1'
-url='http://luajit.org'
-arch="all !s390x"
+url='https://luajit.org/'
+arch="all"
 license="MIT"
 makedepends="$depends_dev paxmark"
 provides="lua"
 subpackages="$pkgname-dev $pkgname-doc"
 source="http://luajit.org/download/$_pkgname-$_pkgver.tar.gz
 	0004-Add-ppc64-support-based-on-koriakin-GitHub-patchset.patch
-	module-paths.patch"
+	module-paths.patch
+	s390x.patch"
 builddir="$srcdir/$_pkgname-$_pkgver"
 
 build() {
@@ -47,4 +48,5 @@ package() {
 
 sha512sums="c44e967a0f671ed32b55aee810bc8b3b63737a2d7363b8984ae1949b24f98dbb3f9be7c1e10239fdeb96a3e3c836f606342cbd61838cf9bcadb077443eb5bc12  LuaJIT-2.1.0-beta3.tar.gz
 2e4a4416ad60f6463b2f4ce2c5b8f0519dfb7bfd85e377fed8423477088c5ac9143d0c30a772e65f492317da63bcd06ab01dabe85933c2bd32d6f061167e5515  0004-Add-ppc64-support-based-on-koriakin-GitHub-patchset.patch
-9c6c410e142838c5128c70570e66beb53cc5422df5ecfb8ab0b5f362637b21ab5978c00f19bc1759165df162fd6438a2ed43e25020400011b7bb14014d87c62e  module-paths.patch"
+9c6c410e142838c5128c70570e66beb53cc5422df5ecfb8ab0b5f362637b21ab5978c00f19bc1759165df162fd6438a2ed43e25020400011b7bb14014d87c62e  module-paths.patch
+56d74d37d703e6b30839c751937d15a3a48d4062cf71f1fc837893b0f05a5befc3734a349168eec490c2d6f66eda028e3738bf57946eb64e8c2407d9c69ada72  s390x.patch"
