testing/monero: disable on aarch64
Build fails with:

```
/usr/lib/gcc/aarch64-alpine-linux-musl/9.2.0/../../../../aarch64-alpine-linux-musl/bin/ld:
  can not size stub section: invalid operation
/usr/lib/gcc/aarch64-alpine-linux-musl/9.2.0/../../../../aarch64-alpine-linux-musl/bin/ld:
  linker stubs: file class ELFCLASSNONE incompatible with ELFCLASS64
/usr/lib/gcc/aarch64-alpine-linux-musl/9.2.0/../../../../aarch64-alpine-linux-musl/bin/ld:
  final link failed: file in wrong format
```

--- a/testing/monero/APKBUILD
+++ b/testing/monero/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.14.1.2
 pkgrel=2
 pkgdesc="Secure, private, untraceable cryptocurrency"
 url="https://getmonero.org/"
-arch="all"
+arch="all !aarch64" # build failure
 license="BSD-3-Clause"
 makedepends="boost-dev cmake cppzmq libsodium-dev miniupnpc-dev openssl-dev
 	rapidjson-dev readline-dev unbound-dev zeromq-dev"
