--- a/testing/seamonkey/APKBUILD
+++ b/testing/seamonkey/APKBUILD
@@ -1,21 +1,22 @@
 # Contributor: Marc Vertes <mvertes@free.fr>
 # Maintainer: Marc Vertes <mvertes@free.fr>
 pkgname=seamonkey
-pkgver=2.49.4
-pkgrel=9
+pkgver=2.49.5
+pkgrel=0
 pkgdesc="all-in-one internet application suite"
-url="https://www.seamonkey-project.org"
+url="https://www.seamonkey-project.org/"
 arch="x86_64 x86"
-license="MPL"
-makedepends="unzip zip gtk+2.0-dev yasm alsa-lib-dev libxt-dev linux-headers
+license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
+makedepends="unzip zip gtk+3.0-dev gtk+2.0-dev yasm alsa-lib-dev libxt-dev linux-headers
 	hunspell-dev nspr-dev nss-dev jpeg-dev bzip2-dev zlib-dev libpng-dev
 	libevent-dev libvpx-dev sqlite-dev libffi-dev pixman-dev python2-dev
 	icu-dev m4 libxcomposite-dev paxmark autoconf2.13 nss-static
 	!firefox
 	"
-source=" https://archive.mozilla.org/pub/mozilla.org/seamonkey/releases/$pkgver/source/seamonkey-$pkgver.source.tar.xz
+source="https://archive.mozilla.org/pub/mozilla.org/seamonkey/releases/$pkgver/source/seamonkey-$pkgver.source.tar.xz
 	mozconfig
 	fix-aouth.patch
+	fix-crmf.patch
 	fix-hunspell.patch
 	fix-i686-musl.patch
 	fix-libevent.patch
@@ -72,11 +73,12 @@ package() {
 	rm -f "$pkgdir/usr/lib/pkgconfig/seamonkey-nspr.pc"
 }
 
-sha512sums="f67dfb269c946da3d8dd6091daf51b80edac0f9e1fe88d860018c8628e5aaaaf17c91d086b6d7502465ccbfe6485fabdf072bb088af5c59520e77f12a5812625  seamonkey-2.49.4.source.tar.xz
-c867aefaab21043455c6c5661c94082e864283ac5abe698b72c4b89ebe97d019740d0d607b94103d077c4003c0d5a7d2cad09c0c52900202fa2160cc06f1ed07  mozconfig
-ac6ad28654723f8ee56f6ddcf2dc2800ee217cd4946cc6b543242881aeaf3edc9f66664205fb6939cec9ce4a2cb2ead4758c0ce021858b672b297ba9295fa392  fix-i686-musl.patch
+sha512sums="31309def1ad4276f13ecb343e936c7cade4b6850db88d9d84700f86bff7024b2b217b9e50fc3756b1d1beea483ceaa2a5a3afd053da00f6ac06e3795e9116789  seamonkey-2.49.5.source.tar.xz
+88bd5980cee447ef6fe8c837b60e2ee15dd2737ba3905a443085317da91e4942654e3a2b56b9b67a25844883c9690f504a664255030951bfac6c227cabb79a11  mozconfig
 c3b3b5a32f8672a42c051c03c31761414ce52c4a32258f1c7417af7de891e4b5f620ef2762034a18f84e5c7235559d920963aff0f28c2c1f4ae697a38d49b89c  fix-aouth.patch
+e0f8e06ac71e5b4defdee80915793848e618174a9ba538477247a479bc7341ae312c66945b7b206f5f22c576091555a67223d7189e95f7b08a20f26d5e9bd2fc  fix-crmf.patch
 ea58a2cf58e7d1d99a2346a6977fcb2acff8052e304f9f0d66e24241d77fe352610537c4d2a886b9085b970368dbe46e5011acc210bebcdf22a88a4b5be960b1  fix-hunspell.patch
+ac6ad28654723f8ee56f6ddcf2dc2800ee217cd4946cc6b543242881aeaf3edc9f66664205fb6939cec9ce4a2cb2ead4758c0ce021858b672b297ba9295fa392  fix-i686-musl.patch
 c2a83214cadc827dd6d37c635ea92ff0779849e55e524b831f1a82ca09dc985770212a81377c2519c3470d752e922fa360d6e49fdfc1f6e9ee581f30ad1885f1  fix-libevent.patch
 f148a9212b9d1bf62ce99e3ea69233fcdd74ffb0948ab53d17ec417539b4f9533409b2e9c487e3789b76cdfca92da074b9ea0f82452f56f72eced9cfbcd078f1  fix-libgen.patch
 fe377b6c0acbbb569f363cde2de8c640837237120bcbc3099cb9d9691f5b576cd76c531b0019e45385f696d7be60bb97141e39f2de742cb6d1a138fbcf217cc5  fix-linux-syscall.patch
