main/sshfs: upgrade to 3.7.0

--- a/main/sshfs/APKBUILD
+++ b/main/sshfs/APKBUILD
@@ -1,20 +1,18 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sshfs
-pkgver=3.6.0
+pkgver=3.7.0
 pkgrel=0
 pkgdesc="FUSE client based on the SSH File Transfer Protocol"
 url="https://github.com/libfuse/sshfs"
 arch="all"
-license="GPL"
+license="GPL-2.0-or-later"
 depends="openssh-client"
 makedepends="fuse3-dev glib-dev meson coreutils"
 subpackages="$pkgname-doc"
-source="https://github.com/libfuse/$pkgname/releases/download/$pkgname-$pkgver/$pkgname-$pkgver.tar.xz"
+source="https://github.com/libfuse/sshfs/releases/download/sshfs-$pkgver/sshfs-$pkgver.tar.xz"
 options="!check" # requires FUSE kernel module to run tests
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
@@ -26,11 +24,10 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C output install
 
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/
 	install -Dm644 AUTHORS COPYING "$pkgdir"/usr/share/doc/$pkgname/
 }
 
-sha512sums="fe34d7bbb76bea6aedf96b4ce7500ad6d81230cca9a43b831302159e5926797a243b7d1675d23ba101057ef247f64ad7df18a73d20578e84b9524218d9ff97bd  sshfs-3.6.0.tar.xz"
+sha512sums="bd8bcd45dd9a5e9686c6fb442e877ffdb592ba0d3424d5dab84a955bfafb17e8666abefba6857467833f5b285842bdadd5a9b6c9e8128ac2e564c36df79aa570  sshfs-3.7.0.tar.xz"
