--- a/testing/libpipeline/APKBUILD
+++ b/testing/libpipeline/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: A. Wilcox <awilfox@adelielinux.org>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libpipeline
-pkgver=1.5.1
+pkgver=1.5.2
 pkgrel=0
 pkgdesc="C pipeline manipulation library"
 url="http://libpipeline.nongnu.org/"
@@ -9,7 +9,7 @@ arch="all"
 license="GPL-3.0-or-later"
 checkdepends="check-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://download.savannah.nongnu.org/releases/$pkgname/$pkgname-$pkgver.tar.gz"
+source="https://download.savannah.nongnu.org/releases/libpipeline/libpipeline-$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -30,4 +30,4 @@ check() {
 	make check
 }
 
-sha512sums="9252c114bc59925eaf73ec9e8bb76b5649ccf985766edd2dc665630ec6de04c341298c74f8dc31c56e9ce20ad83da59df33eb3cc367e18a8012fd693cb823de6  libpipeline-1.5.1.tar.gz"
+sha512sums="721024cea4e8dd85ba31af23e6f65b6ab2323e4006a769674d18101744a5a990aa9ee9fcd9b35360fa1442a6d4a72bfed0227665d4eacba541808b1c48bc9a53  libpipeline-1.5.2.tar.gz"
