--- a/community/libretro-nestopia/APKBUILD
+++ b/community/libretro-nestopia/APKBUILD
@@ -1,16 +1,15 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libretro-nestopia
-_pkgname=nestopia
-pkgver=1.49_git20190819
+pkgver=1.49_git20191227
 pkgrel=0
-_commit="0806f9194735f4af28d3f4fe6165212f5e142a58"
+_commit="810d60a0ea758917b9f051c3c9cf8e10674fb241"
 arch="all"
 url="https://github.com/libretro/nestopia"
 pkgdesc="Nintendo Entertainment System core for libretro"
 license="GPL-2.0-or-later"
 source="$pkgname-$_commit.tar.gz::https://github.com/libretro/nestopia/archive/$_commit.tar.gz"
-builddir="$srcdir/$_pkgname-$_commit"
+builddir="$srcdir/nestopia-$_commit"
 options="!check" # No tests
 
 build() {
@@ -23,4 +22,4 @@ package() {
 	install -Dm644 nestopia_libretro.so "$pkgdir"/usr/lib/libretro/nestopia_libretro.so
 }
 
-sha512sums="d95ede611f83b8dce61b07a37730ab82e6c608b691fed3ad319415134b9d7871ca1ce22d28ce00c8a7e64a41982b719d85252a9aecb113e3927778403eaaa35f  libretro-nestopia-0806f9194735f4af28d3f4fe6165212f5e142a58.tar.gz"
+sha512sums="f664222d22c89768b45e6b7928956de2fad113c4d83132252f71611ec09ba812dce9afda17727e28e18e34868bbcbd5caec7f3024ac5e52b0eee6d9dde48ad94  libretro-nestopia-810d60a0ea758917b9f051c3c9cf8e10674fb241.tar.gz"
